add UPDATE query, icon and edit css

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "dependencies": {
     "@electron-internal/eslint-config": "^1.0.1",
+    "dompurify": "^3.0.9",
     "eslint-plugin-node": "^11.1.0",
+    "jsdom": "^24.0.0",
     "pg": "^8.11.3",
     "socket.io-client": "^4.7.4"
   }
