--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "main.js",
   "scripts": {
     "dev": "npx electronmon .",
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "repository": {
     "type": "git",
@@ -26,12 +28,19 @@
   "homepage": "https://github.com/Vykp00/Media-DBMS#readme",
   "devDependencies": {
     "@electron-forge/cli": "^7.3.0",
+    "@electron-forge/maker-deb": "^7.3.0",
+    "@electron-forge/maker-rpm": "^7.3.0",
+    "@electron-forge/maker-squirrel": "^7.3.0",
+    "@electron-forge/maker-zip": "^7.3.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.3.0",
+    "@electron-forge/plugin-fuses": "^7.3.0",
     "electron": "^29.0.1",
     "eslint": "^8.57.0"
   },
   "dependencies": {
     "@electron-internal/eslint-config": "^1.0.1",
     "dompurify": "^3.0.9",
+    "electron-squirrel-startup": "^1.0.0",
     "eslint-plugin-node": "^11.1.0",
     "jsdom": "^24.0.0",
     "pg": "^8.11.3"
